// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to switch to automatic mode with bitbucket 1`] = `
<ConfirmButton
  cancelButtonText="close"
  confirmButtonText="save"
  confirmDisable={true}
  medium={true}
  modalBody={
    <React.Fragment>
      <div
        className="display-flex-stretch big-spacer-top"
      >
        <RadioCard
          onClick={[Function]}
          selected={true}
          title="organization.members.management.manual"
        >
          <div
            className="spacer-left"
          >
            <ul
              className="big-spacer-left note"
            >
              <li
                className="spacer-bottom"
              >
                organization.members.management.manual.add_members_manually
              </li>
              <li>
                organization.members.management.manual.choose_members_permissions
              </li>
            </ul>
          </div>
        </RadioCard>
        <RadioCard
          onClick={[Function]}
          selected={false}
          title="organization.members.management.automatic.bitbucket"
        >
          <div
            className="spacer-left"
          >
            <ul
              className="big-spacer-left note"
            >
              <React.Fragment>
                <li
                  className="spacer-bottom"
                >
                  organization.members.management.automatic.synchronized_from_x.bitbucket
                </li>
                <li
                  className="spacer-bottom"
                >
                  organization.members.management.automatic.members_changes_reflected.bitbucket
                </li>
              </React.Fragment>
              <li>
                organization.members.management.automatic.still_choose_members_permissions
              </li>
            </ul>
          </div>
          <Alert
            className="big-spacer-top"
            variant="warning"
          >
            organization.members.management.automatic.warning
          </Alert>
        </RadioCard>
      </div>
    </React.Fragment>
  }
  modalHeader="organization.members.management.title"
  modalHeaderDescription={
    <p
      className="spacer-top"
    >
      organization.members.management.description
      <Link
        className="spacer-left"
        onlyActiveOnIndex={false}
        style={Object {}}
        target="_blank"
        to={
          Object {
            "pathname": "/documentation/organizations/manage-team/",
          }
        }
      >
        learn_more
      </Link>
    </p>
  }
  onConfirm={[Function]}
>
  <Component />
</ConfirmButton>
`;

exports[`should allow to switch to automatic mode with github 1`] = `
<ConfirmButton
  cancelButtonText="close"
  confirmButtonText="save"
  confirmDisable={true}
  medium={true}
  modalBody={
    <React.Fragment>
      <div
        className="display-flex-stretch big-spacer-top"
      >
        <RadioCard
          onClick={[Function]}
          selected={true}
          title="organization.members.management.manual"
        >
          <div
            className="spacer-left"
          >
            <ul
              className="big-spacer-left note"
            >
              <li
                className="spacer-bottom"
              >
                organization.members.management.manual.add_members_manually
              </li>
              <li>
                organization.members.management.manual.choose_members_permissions
              </li>
            </ul>
          </div>
        </RadioCard>
        <RadioCard
          onClick={[Function]}
          selected={false}
          title="organization.members.management.automatic.github"
        >
          <div
            className="spacer-left"
          >
            <ul
              className="big-spacer-left note"
            >
              <React.Fragment>
                <li
                  className="spacer-bottom"
                >
                  organization.members.management.automatic.synchronized_from_x.github
                </li>
                <li
                  className="spacer-bottom"
                >
                  organization.members.management.automatic.members_changes_reflected.github
                </li>
              </React.Fragment>
              <li>
                organization.members.management.automatic.still_choose_members_permissions
              </li>
            </ul>
          </div>
          <Alert
            className="big-spacer-top"
            variant="warning"
          >
            organization.members.management.automatic.warning
          </Alert>
        </RadioCard>
      </div>
    </React.Fragment>
  }
  modalHeader="organization.members.management.title"
  modalHeaderDescription={
    <p
      className="spacer-top"
    >
      organization.members.management.description
      <Link
        className="spacer-left"
        onlyActiveOnIndex={false}
        style={Object {}}
        target="_blank"
        to={
          Object {
            "pathname": "/documentation/organizations/manage-team/",
          }
        }
      >
        learn_more
      </Link>
    </p>
  }
  onConfirm={[Function]}
>
  <Component />
</ConfirmButton>
`;

exports[`should allow to switch to manual mode 1`] = `
<ConfirmButton
  cancelButtonText="close"
  confirmButtonText="save"
  confirmDisable={true}
  medium={true}
  modalBody={
    <React.Fragment>
      <div
        className="display-flex-stretch big-spacer-top"
      >
        <RadioCard
          onClick={[Function]}
          selected={false}
          title="organization.members.management.manual"
        >
          <div
            className="spacer-left"
          >
            <ul
              className="big-spacer-left note"
            >
              <li
                className="spacer-bottom"
              >
                organization.members.management.manual.add_members_manually
              </li>
              <li>
                organization.members.management.manual.choose_members_permissions
              </li>
            </ul>
          </div>
        </RadioCard>
        <RadioCard
          onClick={[Function]}
          selected={true}
          title="organization.members.management.automatic.github"
        >
          <div
            className="spacer-left"
          >
            <ul
              className="big-spacer-left note"
            >
              <React.Fragment>
                <li
                  className="spacer-bottom"
                >
                  organization.members.management.automatic.synchronized_from_x.github
                </li>
                <li
                  className="spacer-bottom"
                >
                  organization.members.management.automatic.members_changes_reflected.github
                </li>
              </React.Fragment>
              <li>
                organization.members.management.automatic.still_choose_members_permissions
              </li>
            </ul>
          </div>
        </RadioCard>
      </div>
    </React.Fragment>
  }
  modalHeader="organization.members.management.title"
  modalHeaderDescription={
    <p
      className="spacer-top"
    >
      organization.members.management.description
      <Link
        className="spacer-left"
        onlyActiveOnIndex={false}
        style={Object {}}
        target="_blank"
        to={
          Object {
            "pathname": "/documentation/organizations/manage-team/",
          }
        }
      >
        learn_more
      </Link>
    </p>
  }
  onConfirm={[Function]}
>
  <Component />
</ConfirmButton>
`;
